--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3.8"
+
 services:
-  mysql:
-    image: mysql:latest
+  mysql_db:
+    image: mysql:oraclelinux9
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: Test@123
@@ -9,7 +10,9 @@ services:
     volumes:
       - ./mysql-data:/var/lib/mysql
     networks:
-      - appbridge
+      - expenses-app-nw
+    ports:
+      - "3306:3306"
     healthcheck:
       test: ["CMD","mysqladmin","ping","-h","localhost","-uroot","-pTest@123"]
       interval: 10s
@@ -18,9 +21,10 @@ services:
       start_period: 30s
     restart: always
 
-  mainapp:
-    image: snehcreate/expensetracker_v3
-    container_name: Expensetracker
+  java_app:
+    build:
+      context: .
+    container_name: "expensesapp"
     environment:
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_URL: "jdbc:mysql://mysql:3306/expenses_tracker?allowPublicKeyRetrieval=true&useSSL=false"
@@ -28,13 +32,19 @@ services:
     ports:
       - "8080:8080"
     networks:
-      - appbridge
+      - expenses-app-nw
     depends_on:
-      - mysql
+      - mysql_db
     restart: always
+    healthcheck:
+      test: ["CMD-SHELL","curl -f http://localhost:8080 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
 networks:
-  appbridge:
+  expenses-app-nw:
 
 volumes:
   mysql-data:
